--- a/index.html
+++ b/index.html
@@ -99,163 +99,16 @@
 
 
 
-
-
-
-
-
-
-
-
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-                    <div class="card">
-                        <div class="play">
-                            <i class="fa-regular fa-circle-play"></i>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
-                    </div>
-
-
-
-
                     
+                </div>
+                <div class="playbar">
+                    <div class="songinfo"></div>
+                    <div class="songbuttons">
+                        <img src="img/prevsong.svg" alt="">
+                        <img src="img/play.svg" alt="">
+                        <img src="img/nextsong.svg" alt="">
+                    </div>
+                    <div class="songtime"></div>
                 </div>
             </div>
         </div>
