--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="container flex">
         <div class="left">
             <div class="home p-1 m-1 bg-grey rounded">
+                <img width="25" class="invert cross" src="./img/close.svg" alt="">
                 <img style="padding: 10px 10px 10px 18px;" class="invert point" src="img/logo.svg" alt="">
                 <ul>
                     <li class="point"><img class="invert" src="img/home.svg" alt="home">Home</li>
@@ -45,13 +46,13 @@
                 <div class="p-1">
                     <span class="point">Cookies</span>
                 </div>
-                <button class="btn1">English</button>
+                <button class="btn1"><i class="fa-solid fa-globe"></i>  English</button>
             </div>
         </div>
         <div class="right rounded m-1 bg-grey">
             <div class="header">
                 <div class="nav">
-                    <!-- <img width="40" class="invert hamburger" src="img/hamburger.svg" alt=""> -->
+                    <img width="35" class="invert hamburger" src="img/hamburger.svg" alt="">
                     <svg class="svg" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M15 6L9.70711 11.2929C9.37377 11.6262 9.20711 11.7929 9.20711 12C9.20711 12.2071 9.37377 12.3738 9.70711 12.7071L15 18"
@@ -113,6 +114,7 @@
             </div>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
