--- a/index.html
+++ b/index.html
@@ -84,20 +84,26 @@
                         <div class="play">
                             <i class="fa-regular fa-circle-play"></i>
                         </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
+                        <img src="	https://i.scdn.co/image/ab67616d00001e02bb25239324c4e16ae01fda36" alt="">
+                        <h2>Making Memories</h2>
+                        <p>Karan Aujla,Ikky</p>
                     </div>
                     <div class="card">
                         <div class="play">
                             <i class="fa-regular fa-circle-play"></i>
                         </div>
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
-                        <h2>Aashiqui 2</h2>
-                        <p>Mithoon,Ankit Tiwari,Jeet Gannguli</p>
+                        <img src="	https://i.scdn.co/image/ab67616d00001e021e63de6489803c2b39e7f8e5" alt="">
+                        <h2>love hotel</h2>
+                        <p>leftovermax</p>
                     </div>
-
-
+                    <div class="card">
+                        <div class="play">
+                            <i class="fa-regular fa-circle-play"></i>
+                        </div>
+                        <img src="	https://i.scdn.co/image/ab67616d00001e025f3ede47954a93aa03efe5f9" alt="">
+                        <h2>ANIMAL</h2>
+                        <p>Manan Bhardwaj,Vishal Mishra,Jaani</p>
+                    </div>
 
 
                     
