--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                     </div>
                 </div>
                 <div class="c p-1 wrap">
-                    <span class="point">Legal</span><span class="point">Safety&PrivacyCenter</span><span class="point">PrivacyPolicy</span><span class="point">Cookies</span>
+                    <span class="point">Legal</span><span class="point">Safety&PrivacyCenter</span><span
+                        class="point">PrivacyPolicy</span><span class="point">Cookies</span>
                 </div>
                 <div class="p-1 wrap">
                     <span class="point">About Ads</span><span class="point">Accessibility</span>
@@ -46,19 +47,21 @@
                 <div class="p-1">
                     <span class="point">Cookies</span>
                 </div>
-                <button class="btn1"><i class="fa-solid fa-globe"></i>  English</button>
+                <button class="btn1"><i class="fa-solid fa-globe"></i> English</button>
             </div>
         </div>
         <div class="right rounded m-1 bg-grey">
             <div class="header">
                 <div class="nav">
                     <img width="35" class="invert hamburger" src="img/hamburger.svg" alt="">
-                    <svg class="svg" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M15 6L9.70711 11.2929C9.37377 11.6262 9.20711 11.7929 9.20711 12C9.20711 12.2071 9.37377 12.3738 9.70711 12.7071L15 18"
                             stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
-                    <svg class="svg" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M9 18L14.2929 12.7071C14.6262 12.3738 14.7929 12.2071 14.7929 12C14.7929 11.7929 14.6262 11.6262 14.2929 11.2929L9 6"
                             stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
@@ -106,16 +109,28 @@
                     </div>
 
 
-                    
+
                 </div>
                 <div class="playbar">
-                    <div class="songinfo"></div>
-                    <div class="songbuttons">
-                        <img src="img/prevsong.svg" alt="">
-                        <img src="img/play.svg" alt="">
-                        <img src="img/nextsong.svg" alt="">
+                    <div class="seekbaar">
+                        <div class="circle">
+
+                        </div>
                     </div>
-                    <div class="songtime"></div>
+                    <div class="abovebaar justifyspace">
+                        <div class="songinfo">
+
+
+                        </div>
+                        <div class="songbuttons">
+                            <img class="invert" id="previous" src="img/prevsong.svg" alt="">
+                            <img class="invert" id="play" src="img/play.svg" alt="">
+                            <img class="invert" id="next" src="img/nextsong.svg" alt="">
+                        </div>
+                        <div class="songtime">
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
