--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
-<body>
+<body class="body">
     <div class="container flex">
         <div class="left">
             <div class="home p-1 m-1 bg-grey rounded">
@@ -48,6 +48,7 @@
                     <span class="point">Cookies</span>
                 </div>
                 <button class="btn1"><i class="fa-solid fa-globe"></i> English</button>
+                <button class="change btn1">Theme</button>
             </div>
         </div>
         <div class="right rounded m-1 bg-grey">
@@ -117,24 +118,22 @@
 
                         </div>
                     </div>
-                    <div class="abovebaar justifyspace">
-                        <div class="songinfo">
-
-
+                    <div class="abovebaar justifyspace body">
+                        <div class="songinfo body">
                         </div>
                         <div class="songbuttons">
                             <img class="invert" id="previous" src="img/prevsong.svg" alt="">
                             <img class="invert" id="play" src="img/play.svg" alt="">
                             <img class="invert" id="next" src="img/nextsong.svg" alt="">
                         </div>
-                        <div class="songtime">
-
+                        <div class="songtime body">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <script src="index.js"></script>
 </body>
 
