--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
-<body class="body">
-    <div class="container flex">
+<body class="">
+    <div class="container flex body">
         <div class="left">
             <div class="home p-1 m-1 bg-grey rounded">
                 <img width="25" class="invert cross" src="./img/close.svg" alt="">
@@ -37,18 +37,18 @@
                         <button class="btn">Browse podcasts</button>
                     </div>
                 </div>
-                <div class="c p-1 wrap">
-                    <span class="point">Legal</span><span class="point">Safety&PrivacyCenter</span><span
-                        class="point">PrivacyPolicy</span><span class="point">Cookies</span>
+                <div class="c p-1 wrap bodycl">
+                    <span class="point bodycl">Legal</span><span class="point bodycl">Safety&PrivacyCenter</span><span
+                        class="point bodycl">PrivacyPolicy</span><span class="point bodycl">Cookies</span>
                 </div>
-                <div class="p-1 wrap">
-                    <span class="point">About Ads</span><span class="point">Accessibility</span>
+                <div class="p-1 wrap bodycl">
+                    <span class="point bodycl">About Ads</span><span class="point bodycl">Accessibility</span>
                 </div>
-                <div class="p-1">
-                    <span class="point">Cookies</span>
+                <div class="p-1 ">
+                    <span class="point bodycl">Cookies</span>
                 </div>
                 <button class="btn1"><i class="fa-solid fa-globe"></i> English</button>
-                <button class="change btn1">Theme</button>
+                <button class="change btn1"><i class="fa-solid fa-shirt"></i> Theme</button>
             </div>
         </div>
         <div class="right rounded m-1 bg-grey">
@@ -69,7 +69,7 @@
                     </svg>
                 </div>
                 <div class="buttons">
-                    <button class="signupbtn">Sign up</button>
+                    <button class="signupbtn bodycl">Sign up</button>
                     <button class="loginbtn">Log in</button>
                 </div>
             </div>
@@ -112,21 +112,21 @@
 
 
                 </div>
-                <div class="playbar">
+                <div class="playbar body">
                     <div class="seekbaar">
                         <div class="circle">
 
                         </div>
                     </div>
                     <div class="abovebaar justifyspace body">
-                        <div class="songinfo body">
+                        <div class="songinfo">
                         </div>
                         <div class="songbuttons">
                             <img class="invert" id="previous" src="img/prevsong.svg" alt="">
                             <img class="invert" id="play" src="img/play.svg" alt="">
                             <img class="invert" id="next" src="img/nextsong.svg" alt="">
                         </div>
-                        <div class="songtime body">
+                        <div class="songtime">
                         </div>
                     </div>
                 </div>
